@@ -130,6 +130,8 @@ class KnitRepository(MetaDirRepository):
         self._commit_builder_class = _commit_builder_class
         self._serializer = _serializer
         self._reconcile_fixes_text_parents = True
+        self._fetch_uses_deltas = True
+        self._fetch_order = 'topological'
 
     def _warn_if_deprecated(self):
         # This class isn't deprecated
