@@ -162,6 +162,18 @@ class TestRepositoryFormat(TestCaseWithTransport):
 
 class TestFormat6(TestCaseWithTransport):
 
+    def test_attribute__fetch_order(self):
+        """Weaves need topological data insertion."""
+        control = bzrdir.BzrDirFormat6().initialize(self.get_url())
+        repo = weaverepo.RepositoryFormat6().initialize(control)
+        self.assertEqual('topological', repo._fetch_order)
+
+    def test_attribute__fetch_uses_deltas(self):
+        """Weaves do not reuse deltas."""
+        control = bzrdir.BzrDirFormat6().initialize(self.get_url())
+        repo = weaverepo.RepositoryFormat6().initialize(control)
+        self.assertEqual(False, repo._fetch_uses_deltas)
+
     def test_no_ancestry_weave(self):
         control = bzrdir.BzrDirFormat6().initialize(self.get_url())
         repo = weaverepo.RepositoryFormat6().initialize(control)
@@ -178,7 +190,19 @@ class TestFormat6(TestCaseWithTransport):
 
 
 class TestFormat7(TestCaseWithTransport):
-    
+
+    def test_attribute__fetch_order(self):
+        """Weaves need topological data insertion."""
+        control = bzrdir.BzrDirMetaFormat1().initialize(self.get_url())
+        repo = weaverepo.RepositoryFormat7().initialize(control)
+        self.assertEqual('topological', repo._fetch_order)
+
+    def test_attribute__fetch_uses_deltas(self):
+        """Weaves do not reuse deltas."""
+        control = bzrdir.BzrDirMetaFormat1().initialize(self.get_url())
+        repo = weaverepo.RepositoryFormat7().initialize(control)
+        self.assertEqual(False, repo._fetch_uses_deltas)
+
     def test_disk_layout(self):
         control = bzrdir.BzrDirMetaFormat1().initialize(self.get_url())
         repo = weaverepo.RepositoryFormat7().initialize(control)
@@ -307,6 +331,18 @@ class TestFormat7(TestCaseWithTransport):
 
 class TestFormatKnit1(TestCaseWithTransport):
     
+    def test_attribute__fetch_order(self):
+        """Knits need topological data insertion."""
+        repo = self.make_repository('.',
+                format=bzrdir.format_registry.get('knit')())
+        self.assertEqual('topological', repo._fetch_order)
+
+    def test_attribute__fetch_uses_deltas(self):
+        """Knits reuse deltas."""
+        repo = self.make_repository('.',
+                format=bzrdir.format_registry.get('knit')())
+        self.assertEqual(True, repo._fetch_uses_deltas)
+
     def test_disk_layout(self):
         control = bzrdir.BzrDirMetaFormat1().initialize(self.get_url())
         repo = knitrepo.RepositoryFormatKnit1().initialize(control)
@@ -558,6 +594,20 @@ class TestMisc(TestCase):
 
 class TestRepositoryFormatKnit3(TestCaseWithTransport):
 
+    def test_attribute__fetch_order(self):
+        """Knits need topological data insertion."""
+        format = bzrdir.BzrDirMetaFormat1()
+        format.repository_format = knitrepo.RepositoryFormatKnit3()
+        repo = self.make_repository('.', format=format)
+        self.assertEqual('topological', repo._fetch_order)
+
+    def test_attribute__fetch_uses_deltas(self):
+        """Knits reuse deltas."""
+        format = bzrdir.BzrDirMetaFormat1()
+        format.repository_format = knitrepo.RepositoryFormatKnit3()
+        repo = self.make_repository('.', format=format)
+        self.assertEqual(True, repo._fetch_uses_deltas)
+
     def test_convert(self):
         """Ensure the upgrade adds weaves for roots"""
         format = bzrdir.BzrDirMetaFormat1()
@@ -681,6 +731,18 @@ class TestKnitPackNoSubtrees(TestCaseWithTransport):
 
     def get_format(self):
         return bzrdir.format_registry.make_bzrdir('pack-0.92')
+
+    def test_attribute__fetch_order(self):
+        """Packs do not need ordered data retrieval."""
+        format = self.get_format()
+        repo = self.make_repository('.', format=format)
+        self.assertEqual('unsorted', repo._fetch_order)
+
+    def test_attribute__fetch_uses_deltas(self):
+        """Packs reuse deltas."""
+        format = self.get_format()
+        repo = self.make_repository('.', format=format)
+        self.assertEqual(True, repo._fetch_uses_deltas)
 
     def test_disk_layout(self):
         format = self.get_format()
